# play_i

./: .codeclimate.yml  .coveragerc  .gitignore  Dockerfile  README.md  play_test.py  pyproject.toml  requirements.txt
.circleci/: config.yml
play_i/: __init__.py  testeroo.py
play_i/games/core/: base_game.py  deck.py
play_i/games/jaipur/: __init__.py  jaipur.py  renderer.py
play_i/games/tic_tac_toe/: headless_renderer.py  renderer.py  tic_tac_toe.py
play_i/player/: console_player.py  min_max_player.py  player.py  player_utils.py  random_player.py
play_i/test/: bootstrap.py  gen_stats.py
tests/play_i/games/jaipur/: test_jaipur.py
tests/play_i/games/tic_tac_toe/: test_tic_tac_toe.py  test_tic_test.py
