[tool.poetry]
name = "play-i"
version = "0.1.0"
description = ""
authors = ["Kallin Nagelberg <kallin.nagelberg@gmail.com>"]
readme = "README.md"
packages = [{include = "play_i"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
